kubernetes/media/radarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: pve1
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: radarr
        image: ghcr.io/home-operations/radarr:6.0.3
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: media
        persistentVolumeClaim:
          claimName: media
