kubernetes/media/radarr/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: radarr
spec:
  serviceName: radarr
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: radarr
        image: ghcr.io/home-operations/radarr:6.0.3
        livenessProbe:
          httpGet:
            path: /ping
            port: 7878
          initialDelaySeconds: 30
          timeoutSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: longhorn
      resources:
        requests:
          storage: 5Gi
