kubernetes/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  clusterIP: None
  selector:
    app: radarr
  ports:
  - port: 80
    targetPort: 7878
